# duck-db-server

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/duck_db/: deserialize_params.rs  duck_db_row.rs  duck_db_value.rs  mod.rs
src/flows/: execute.rs  execute_select.rs  mod.rs
src/http_server/: mod.rs  start_up.rs
src/http_server/controllers/: builder.rs  mod.rs
src/http_server/controllers/data_controller/: contracts.rs  execute_action.rs  mod.rs  select_action.rs
src/http_server/controllers/table_controller/: describe_action.rs  mod.rs
src/scripts/: execute.rs  execute_select.rs  get_table_schema.rs  get_table_schema_description.rs  mod.rs
src/table_schema/: get_table_schema.rs  table_column_description.rs
