[package]
name = "duck-db-server"
version = "0.1.0"
edition = "2024"

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

tokio = { version = "*", features = ["full"] }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }

serde = "*"

duckdb = { version = "*", features = ["bundled", "polars"] }
async-trait = "*"

my-json = { version = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }
rust_decimal = "*"
